--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                         <span class="icon"><i class="fa fa-car" aria-hidden="true"></i></span>
                         <span class="title">Cars</span>
                     </button>
+                    <button data-tab-target=".tab3" class="tabs__button">
+                      <span class="icon"><i class="fas fa-shopping-cart"></i></span>
+                      <span class="title">Orders</span>
+                    </button>
                 
                     <button data-tab-target=".tab2" class="tabs__button">
                         <span class="icon"><i class="fa fa-users" aria-hidden="true"></i></span>
@@ -42,7 +46,6 @@
                     <button class="tabs__button">
                         <span class="icon">
                             <i class="fa fa-sign-out-alt" aria-hidden="true"></i>
-
                         </span>
                         <span class="title"> <a href="Admin-login.html">Sign Out</a></span>
                     </button>
